# math_array

./: CMakeLists.txt  LICENSE  README.md  math_array.h
tests/: math_array_tests.cpp  math_array_tests.h  test.cpp  test_assert.h
